<resources>
    <string name="app_name">Alliase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Enter_mobile_number">Enter mobile number</string>
    <string name="notification">notification</string>
    <string name="menu">menu</string>
    <string name="login">login</string>
    <string name="register">Register</string>
    <string name="skip">skip</string>
    <string name="Required">Required</string>
    <string name="apperance">Apperance</string>
    <string name="privacy">Privacy</string>
    <string name="report">Report</string>
    <string name="help">Help</string>
    <string name="profile">Profile</string>
    <string name="mother_name">Mother name</string>
    <string name="recent">recent</string>
</resources>