<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grou"
        android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/face_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/apperance"
            android:icon="@drawable/visibility_black_24dp"
            android:title="@string/apperance" />
        <item
            android:id="@+id/privacy"
            android:icon="@drawable/manage_accounts_black_24dp"
            android:title="@string/privacy" />
        <item
            android:id="@+id/report"
            android:icon="@drawable/report_problem_black_24dp"
            android:title="@string/report" />
        <item
            android:id="@+id/help"
            android:icon="@drawable/contact_support_black_24dp"
            android:title="@string/help" />
    </group>
</menu>