<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home"
    tools:context=".home2">


    <TextView
        android:id="@+id/login2"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:shadowColor="@color/blue"
        android:text="@string/login"
        android:textColor="@color/teal_200"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />

    <TextView
        android:id="@+id/register"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:gravity="center"

        android:text="@string/register"
        android:textColor="@color/teal_200"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login2"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/skip2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/skip"
        android:textColor="@color/teal_200"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:src="@drawable/not_started_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/skip2"
        app:layout_constraintEnd_toStartOf="@+id/skip2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/skip2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>