<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu">

    <RelativeLayout
        android:id="@+id/linear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/profile1"
            android:layout_marginTop="0dp"
            android:background="?android:attr/listDivider" />


        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="0dp"
            android:background="?android:attr/listDivider" />


        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@+id/textView7"
            android:layout_marginTop="0dp"
            android:background="?android:attr/listDivider" />


        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@+id/textView8"
            android:layout_marginTop="0dp"
            android:background="?android:attr/listDivider" />


        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@+id/textView9"
            android:layout_marginTop="0dp"
            android:background="?android:attr/listDivider" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="39dp"
            android:hint="@string/profile"
            android:textStyle="italic"
            app:startIconDrawable="@drawable/face_black_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:focusable="false">

            </com.google.android.material.textfield.TextInputEditText>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textView6"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/divider"
            android:layout_alignParentStart="true"
            android:hint="@string/apperance"
            android:textStyle="italic"
            app:autoSizeTextType="uniform"
            app:startIconDrawable="@drawable/visibility_black_24dp">

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textView7"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/divider2"
            android:layout_alignParentStart="true"
            android:layout_marginTop="0dp"
            android:hint="@string/privacy"
            app:startIconDrawable="@drawable/manage_accounts_black_24dp">

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textView8"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/divider3"
            android:layout_alignParentStart="true"
            android:layout_marginTop="0dp"
            android:hint="@string/report"
            app:startIconDrawable="@drawable/report_problem_black_24dp">

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textView9"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/divider4"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:hint="@string/help"
            app:startIconDrawable="@drawable/contact_support_black_24dp">

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>